kubernetes/applications/mpos/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mpos-service
  labels:
    app: mpos-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mpos
  template:
    metadata:
      labels:
        app: mpos
    spec:
      containers:
        - name: mpos-service-1.0
          image: upendra28/mpos:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
