kubernetes/applications/mpos/base/mpos-service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: mpos-service-stable
  labels:
    app: mpos-service-stable
spec:
  selector:
    app: mpos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
