kubernetes/applications/mpos/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mpos-svc
  labels:
    app: mpos-svc
spec:
  type: ClusterIP
  selector:
    app: mpos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
