kubernetes/applications/mpos/base/mpos-service-ingress-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mpos-service-ingress-stable
spec:
  rules:
   - http:
      paths:
        - path: /mpos
          pathType: Prefix
          backend:
            service:
              name: mpos-service-stable
              port:
                number: 80
